# ChessEngine

./: CMakeLists.txt  CMakePresets.json
Engine/: CMakeLists.txt  main.cpp
Engine/include/: Board.h  Engine.h  Game.h  GameState.h  Move.h  MoveGen.h  Piece.h
Engine/src/: Board.cpp  Engine.cpp  GameState.cpp  MoveGen.cpp
GUI/: CMakeLists.txt
GUI/include/: Application.h  GraphicsIncludes.h  Window.h
GUI/src/: Application.cpp  Window.cpp
Rendering/: CMakeLists.txt
Rendering/include/: Renderer.h  ResourceManager.h
Rendering/shaders/: DarkSquare.frag  Highlight.frag  LightSquare.frag  Sprite.frag
Rendering/src/: Renderer.cpp  ResourceManager.cpp
